@@ -1,8 +1,10 @@
 package com.shramikconnect.modules.job.service;
 
+import com.shramikconnect.entity.Job;
 import com.shramikconnect.entity.JobApplication;
 import com.shramikconnect.entity.User;
 import com.shramikconnect.modules.job.dto.JobApplicationResponse;
+import com.shramikconnect.modules.job.repository.ClientJobRepository;
 import com.shramikconnect.modules.job.repository.JobApplicationRepository;
 import com.shramikconnect.modules.user.repository.UserRepository;
 import com.shramikconnect.common.enums.ApplicationStatus;
@@ -19,27 +21,44 @@ import java.util.stream.Collectors;
 public class JobApplicationService {
 
     private final JobApplicationRepository jobApplicationRepository;
+    private final ClientJobRepository clientJobRepository;
     private final UserRepository userRepository;
 
     public List<JobApplicationResponse> getApplicationsByClient(String username) {
+
         User user = userRepository.findByEmail(username)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        List<JobApplication> applications = jobApplicationRepository
-                .findByJob_PostedBy_UserIdOrderByAppliedAtDesc(user.getUserId());
-        
-        return applications.stream().map(this::mapToResponse).collect(Collectors.toList());
+        List<Job> jobs = clientJobRepository.findByPostedByUserId(user.getUserId());
+
+        List<Integer> jobIds = jobs.stream()
+                .map(Job::getJobId)
+                .toList();
+
+        List<JobApplication> applications =
+                jobApplicationRepository.findByJobJobIdIn(jobIds);
+
+        return applications.stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
-    public void updateApplicationStatus(Integer applicationId, ApplicationStatus status, String username) {
+    public void updateApplicationStatus(
+            Integer applicationId,
+            ApplicationStatus status,
+            String username) {
+
         User user = userRepository.findByEmail(username)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
         JobApplication application = jobApplicationRepository.findById(applicationId)
                 .orElseThrow(() -> new RuntimeException("Application not found"));
 
-        if (!application.getJob().getPostedBy().equals(user)) {
-            throw new RuntimeException("Unauthorized to update this application");
+        Job job = clientJobRepository.findById(application.getJobJobId())
+                .orElseThrow(() -> new RuntimeException("Job not found"));
+
+        if (!job.getPostedByUserId().equals(user.getUserId())) {
+            throw new RuntimeException("Unauthorized");
         }
 
         application.setStatus(status);
@@ -47,14 +66,14 @@ public class JobApplicationService {
     }
 
     private JobApplicationResponse mapToResponse(JobApplication application) {
+
         JobApplicationResponse response = new JobApplicationResponse();
         response.setApplicationId(application.getApplicationId());
-        response.setJobId(application.getJob().getJobId());
-        response.setJobTitle(application.getJob().getTitle());
-        response.setApplicantName(application.getApplicant().getFullName());
-        response.setApplicantEmail(application.getApplicant().getEmail());
+        response.setJobId(application.getJobJobId());
+        response.setApplicantUserId(application.getApplicantUserId());
         response.setStatus(application.getStatus());
         response.setAppliedAt(application.getAppliedAt());
+
         return response;
     }
 }
